--- a/team.html
+++ b/team.html
@@ -456,8 +456,9 @@
         <script src="js/jquery.scrollUp.min.js"></script>
         <script src="js/imagesloaded.pkgd.min.js"></script>
         <script src="js/jquery.magnific-popup.min.js"></script>
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBvEEMx3XDpByNzYNn0n62Zsq_sVYPx1zY"></script>
+        <script src="src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3588.7109367244825!2d89.4310357481349!3d25.91187145850208!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39e2d9deadcc3ff1%3A0x7bb8546d0e9b4965!2sSAIBA%20DOT%20COM!5e0!3m2!1sen!2sbd!4v1756713577670!5m2!1sen!2sbd" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
+
